syntax = "proto3";

service DownloadService {
    rpc DistributeDownload (DistributedDownloadRequest) returns (DownloadResponse) {};
    rpc Download(DownloadRequest) returns (DownloadResponse) {};
}

message DistributedDownloadRequest {
    string link = 1;
    string saveto = 2;
    string saveas = 3;
    repeated string peerIPAddr = 4;
    uint64 noofparts = 5;
}

message DownloadRequest {
    string link = 1;
    uint64 start = 2;
    uint64 end = 3;
    uint64 noofparts = 4;
}

message DownloadResponse {
    bytes data = 1;
    oneof requestReceived {
        DistributedDownloadRequest DDRequest = 2;
        DownloadRequest DRequest = 3;
    }
}

/*
Commands for Generating `JavaScript` and `Go` Stub (Run the command from root dir (previour folder))
1. JavaScript
protoc -I=didm didm/didm.proto --js_out=import_style=commonjs:didm
protoc -I=didm didm/didm.proto --grpc-web_out=import_style=commonjs,mode=grpcwebtext:didm
2. Golang
protoc -I didm/ didm/didm.proto --go_out=plugins=grpc:didm
*/